{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 58,
  "lineage": "1668262b-0c44-1bb6-3761-80bd3235b3f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a33ea7d8fe875bc6",
            "arn": "arn:aws:ec2:us-east-1:096280765184:instance/i-02826bfc65583af07",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02826bfc65583af07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "awinteransible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017d86052d14a43da",
            "private_dns": "ip-10-0-0-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.5",
            "public_dns": "ec2-54-145-226-233.compute-1.amazonaws.com",
            "public_ip": "54.145.226.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c4d7bbf9dceb9e5f",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-042c45c48825ee590",
            "tags": {
              "Name": "awinter-EC2"
            },
            "tags_all": {
              "Name": "awinter-EC2",
              "env": "awinter"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b11b1245539cf9f5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone",
            "data.aws_ssm_parameter.instance_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096280765184:internet-gateway/igw-0a53c5288d2707157",
            "id": "igw-0a53c5288d2707157",
            "owner_id": "096280765184",
            "tags": {
              "Name": "$(var.default_tags.env)-IGW"
            },
            "tags_all": {
              "Name": "$(var.default_tags.env)-IGW",
              "env": "awinter"
            },
            "vpc_id": "vpc-0557e318766a63714"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a53c5288d2707157",
            "id": "r-rtb-0e5b6080cd754a3ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e5b6080cd754a3ce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_IGW",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096280765184:route-table/rtb-07c4b16c0189a2c1e",
            "id": "rtb-07c4b16c0189a2c1e",
            "owner_id": "096280765184",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "$(var.default_tags.env)-Private-RT"
            },
            "tags_all": {
              "Name": "$(var.default_tags.env)-Private-RT",
              "env": "awinter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0557e318766a63714"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096280765184:route-table/rtb-0e5b6080cd754a3ce",
            "id": "rtb-0e5b6080cd754a3ce",
            "owner_id": "096280765184",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a53c5288d2707157",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "$(var.default_tags.env)-Public-RT"
            },
            "tags_all": {
              "Name": "$(var.default_tags.env)-Public-RT",
              "env": "awinter"
            },
            "timeouts": null,
            "vpc_id": "vpc-0557e318766a63714"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089d7c18b5c34afeb",
            "route_table_id": "rtb-0e5b6080cd754a3ce",
            "subnet_id": "subnet-042c45c48825ee590"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06549abb6809d7290",
            "route_table_id": "rtb-0e5b6080cd754a3ce",
            "subnet_id": "subnet-0b6dc866e10684590"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096280765184:subnet/subnet-0f2402726c0f8be06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2402726c0f8be06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "096280765184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "$(var.default_tags.env)-Private-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "$(var.default_tags.env)-Private-Subnet-us-east-1a",
              "env": "awinter"
            },
            "vpc_id": "vpc-0557e318766a63714"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096280765184:subnet/subnet-06537325963be8140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06537325963be8140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "096280765184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "$(var.default_tags.env)-Private-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "$(var.default_tags.env)-Private-Subnet-us-east-1b",
              "env": "awinter"
            },
            "vpc_id": "vpc-0557e318766a63714"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096280765184:subnet/subnet-042c45c48825ee590",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042c45c48825ee590",
            "ipv6_cidr_block": "2600:1f18:d4b:d300::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-04925e70a0cce9080",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "096280765184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "$(var.default_tags.env}-Public-Subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "$(var.default_tags.env}-Public-Subnet-us-east-1a",
              "env": "awinter"
            },
            "vpc_id": "vpc-0557e318766a63714"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096280765184:subnet/subnet-0b6dc866e10684590",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6dc866e10684590",
            "ipv6_cidr_block": "2600:1f18:d4b:d301::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-01a1cd323af811b25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "096280765184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "$(var.default_tags.env}-Public-Subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "$(var.default_tags.env}-Public-Subnet-us-east-1b",
              "env": "awinter"
            },
            "vpc_id": "vpc-0557e318766a63714"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096280765184:vpc/vpc-0557e318766a63714",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078d350302f9af54d",
            "default_route_table_id": "rtb-0cb55aac157ce5b98",
            "default_security_group_id": "sg-0b11b1245539cf9f5",
            "dhcp_options_id": "dopt-0cf47a4fbbbc469e0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0557e318766a63714",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-06c04d83c00914f98",
            "ipv6_cidr_block": "2600:1f18:d4b:d300::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb55aac157ce5b98",
            "owner_id": "096280765184",
            "tags": {
              "Name": "Awinter-VPC"
            },
            "tags_all": {
              "Name": "Awinter-VPC",
              "env": "awinter"
            }
          }
        }
      ]
    }
  ]
}